RESOLVED FIXED285850
[GStreamer] ASSERTION FAILED: pipeline and player states are not synchronized
https://bugs.webkit.org/show_bug.cgi?id=285850
Summary [GStreamer] ASSERTION FAILED: pipeline and player states are not synchronized
Alicia Boya García
Reported 2025-01-13 08:28:19 PST
This assertion has been found failing when scrolling away from videos, e.g. in https://www.wpewebkit.org
Attachments
Alicia Boya García
Comment 1 2025-01-13 08:46:59 PST
EWS
Comment 2 2025-01-14 17:28:32 PST
Committed 288906@main (d65ff7e6d420): <https://commits.webkit.org/288906@main> Reviewed commits have been landed. Closing PR #38937 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.